--- a/Practical/Practical-11.html
+++ b/Practical/Practical-11.html
@@ -15,7 +15,7 @@
             width: 80%;
             margin: 10px auto;
             border-spacing: 0;
-            border: 2px solid;
+            border: 5px solid;
             border-radius: 8px;
             font-size: 1.5vw;
         }
@@ -44,6 +44,9 @@
             text-decoration: none;
             color: darkgrey;
         }
+        a:hover{
+            color: blue;
+        }
         .edit{
             font-size: 2vw;
         }
@@ -56,9 +59,11 @@
         .delete:hover{
             color: red;
         }
-        .tooltip{
-            color: white;
-            background-color: black;
+        tr td:nth-child(4){
+            color: green;
+        }
+        tr:last-child td:nth-child(4){
+            color: red;
         }
 
     </style>
@@ -90,8 +95,8 @@
             <td>Live your First Web-Page on Git-Hub.</td>
             <td><a href="./Practical-2.html">Practical-2</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons edit">edit</i></a>
-                <a href="#"><i class="material-icons delete">delete</i></a>
+            <td><a href="#"><i class="material-icons edit" title="edit">edit</i></a>
+                <a href="#"><i class="material-icons delete" title="delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -99,8 +104,8 @@
             <td>Create a web page showing a basic HTML structure using character Entities and span Tag.</td>
             <td><a href="./Practical-3.html">Practical-3</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons edit">edit</i></a>
-                <a href="#"><i class="material-icons delete">delete</i></a>
+            <td><a href="#"><i class="material-icons edit" title="edit">edit</i></a>
+                <a href="#"><i class="material-icons delete" title="delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -109,8 +114,8 @@
                 practical Page links.</td>
             <td><a href="./Practical-4.html">Practical-4</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons edit">edit</i></a>
-                <a href="#"><i class="material-icons delete">delete</i></a>
+            <td><a href="#"><i class="material-icons edit" title="edit">edit</i></a>
+                <a href="#"><i class="material-icons delete" title="delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -118,8 +123,8 @@
             <td>Create a Web-Page showing the use of image-map in the Web Application.</td>
             <td><a href="./Practical-5.html">Practical-5</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons edit">edit</i></a>
-                <a href="#"><i class="material-icons delete">delete</i></a>
+            <td><a href="#"><i class="material-icons edit" title="edit">edit</i></a>
+                <a href="#"><i class="material-icons delete" title="delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -127,8 +132,8 @@
             <td> Create a Card Layout using CSS layout properties.</td>
             <td><a href="./Practical-6.html">Practical-6</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons edit">edit</i></a>
-                <a href="#"><i class="material-icons delete">delete</i></a>
+            <td><a href="#"><i class="material-icons edit" title="edit">edit</i></a>
+                <a href="#"><i class="material-icons delete" title="delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -136,8 +141,8 @@
             <td>Create a Web Page Layout using div tags.</td>
             <td><a href="./Practical-7.html">Practical-7</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons edit">edit</i></a>
-                <a href="#"><i class="material-icons delete">delete</i></a>
+            <td><a href="#"><i class="material-icons edit" title="edit">edit</i></a>
+                <a href="#"><i class="material-icons delete" title="delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -145,8 +150,8 @@
             <td>Create a web page having Fixed Navigation Bar with the given content.</td>
             <td><a href="./Practical-8.html">Practical-8</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons edit">edit</i></a>
-                <a href="#"><i class="material-icons delete">delete</i></a>
+            <td><a href="#"><i class="material-icons edit" title="edit">edit</i></a>
+                <a href="#"><i class="material-icons delete" title="delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -154,8 +159,8 @@
             <td>Create a Responsive Web Layout with Responsive Navigation Bar.</td>
             <td><a href="./Practical-9.html">Practical-9</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons edit">edit</i></a>
-                <a href="#"><i class="material-icons delete">delete</i></a>
+            <td><a href="#"><i class="material-icons edit" title="edit">edit</i></a>
+                <a href="#"><i class="material-icons delete" title="delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -163,8 +168,8 @@
             <td>Create a Responsive Side-Bar Navigation Menu.</td>
             <td><a href="./Practical-10.html">Practical-10</a></td>
             <td>Un-Checked</td>
-            <td><a href="#"><i class="material-icons edit">edit</i></a>
-                <a href="#"><i class="material-icons delete">delete</i></a>
+            <td><a href="#"><i class="material-icons edit" title="edit">edit</i></a>
+                <a href="#"><i class="material-icons delete" title="delete">delete</i></a>
             </td>
         </tr>
     </table>
